--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   firebase_core: ^2.3.0
   cloud_firestore: ^4.1.0
   shared_preferences: ^2.0.15
+  image_picker: ^0.8.6
+  firebase_storage: ^11.0.6
 
 dev_dependencies:
   flutter_test:
